--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tempo com o Amor da Minha Vida</title>
+    <title>Tempo Juntos</title>
     <link rel="stylesheet" href="styles.css"> <!-- Link para o arquivo CSS -->
 </head>
 <body>
     <div id="container">
+        <!-- Título -->
+        <div id="title">Tempo com o Amor da Minha Vida</div>
+        
+        <!-- Exibe o tempo calculado -->
+        <div id="time">Carregando...</div>
+        
         <!-- Carrossel de imagens -->
         <div class="image-slider">
             <div class="images">
@@ -18,9 +24,6 @@
                 <img src="foto5.jpg" alt="Foto 5">
             </div>
         </div>
-
-        <!-- Exibe o tempo calculado -->
-        <div id="time">Carregando...</div>
     </div>
 
     <script src="script.js"></script> <!-- Link para o arquivo JavaScript -->
