--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css"> <!-- Link para o arquivo CSS -->
 </head>
 <body>
+    <!-- Camada para os corações -->
+    <div id="hearts"></div>
+
     <div id="container">
         <!-- Título -->
         <div id="title">Tempo com o Amor da Minha Vida</div>
