--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <!-- Carrossel de imagens -->
         <div class="image-slider">
             <div class="images">
-                <img src="foto1.jpg" alt="Foto 1">
-                <img src="foto2.jpg" alt="Foto 2">
-                <img src="foto3.jpg" alt="Foto 3">
-                <img src="foto4.jpg" alt="Foto 4">
-                <img src="foto5.jpg" alt="Foto 5">
+                <img src="contador-de-relacionamento/foto1.jpg" alt="Foto 1">
+                <img src="contador-de-relacionamento/foto2.jpg" alt="Foto 2">
+                <img src="contador-de-relacionamento/foto3.jpg" alt="Foto 3">
+                <img src="contador-de-relacionamento/foto4.jpg" alt="Foto 4">
+                <img src="contador-de-relacionamento/foto5.jpg" alt="Foto 5">
             </div>
         </div>
     </div>
