--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <!-- Carrossel de imagens -->
         <div class="image-slider">
             <div class="images">
-                <img src="https://github.com/brunobenites/contador-de-relacionamento/blob/main/foto5.jpg" alt="Foto 1">
-                <img src="https://github.com/brunobenites/contador-de-relacionamento/blob/main/foto4.jpg" alt="Foto 2">
-                <img src="https://github.com/brunobenites/contador-de-relacionamento/blob/main/foto3.jpg" alt="Foto 3">
-                <img src="https://github.com/brunobenites/contador-de-relacionamento/blob/main/foto2.jpg" alt="Foto 4">
-                <img src="https://github.com/brunobenites/contador-de-relacionamento/blob/main/foto1.jpg" alt="Foto 5">
+                <img src="https://github.com/brunobenites/contador-de-relacionamento/blob/main/foto1.jpg?raw=true" alt="Foto 1">
+                <img src="https://github.com/brunobenites/contador-de-relacionamento/blob/main/foto2.jpg?raw=true" alt="Foto 2">
+                <img src="https://github.com/brunobenites/contador-de-relacionamento/blob/main/foto3.jpg?raw=true" alt="Foto 3">
+                <img src="https://github.com/brunobenites/contador-de-relacionamento/blob/main/foto4.jpg?raw=true" alt="Foto 4">
+                <img src="https://github.com/brunobenites/contador-de-relacionamento/blob/main/foto5.jpg?raw=true" alt="Foto 5">
             </div>
         </div>
     </div>
