--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <!-- Carrossel de imagens -->
         <div class="image-slider">
             <div class="images">
+                <!-- Fotos com links diretos -->
                 <img src="https://raw.githubusercontent.com/brunobenites/contador-de-relacionamento/main/foto1.jpg" alt="Foto 1">
                 <img src="https://raw.githubusercontent.com/brunobenites/contador-de-relacionamento/main/foto2.jpg" alt="Foto 2">
                 <img src="https://raw.githubusercontent.com/brunobenites/contador-de-relacionamento/main/foto3.jpg" alt="Foto 3">
