--- a/index.html
+++ b/index.html
@@ -32,3 +32,7 @@
     <script src="script.js"></script> <!-- Link para o arquivo JavaScript -->
 </body>
 </html>
+<audio autoplay loop>
+    <source src="https://www.youtube.com/shorts/ZdP-KdBfFFY" type="audio/mp3">
+    Seu navegador não suporta áudio.
+</audio>
