--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     <script src="script.js"></script> <!-- Link para o arquivo JavaScript -->
 </body>
 </html>
-<audio autoplay loop>
-    <source src="https://www.youtube.com/shorts/ZdP-KdBfFFY" type="audio/mp3">
-    Seu navegador não suporta áudio.
-</audio>
+<iframe width="0" height="0" 
+    src="https://www.youtube.com/shorts/ZdP-KdBfFFY" 
+    frameborder="0" allow="autoplay"></iframe>
