--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
         <div id="time">Carregando...</div>
     </div>
 
+    <!-- Incorporar o áudio do YouTube, ocultando o vídeo -->
+    <iframe width="0" height="0" 
+        src="https://www.youtube.com/embed/ZdP-KdBfFFY?autoplay=1&loop=1&playlist=ZdP-KdBfFFY" 
+        frameborder="0" allow="autoplay"></iframe>
+
     <script src="script.js"></script> <!-- Link para o arquivo JavaScript -->
 </body>
 </html>
-<iframe width="0" height="0" 
-    src="https://www.youtube.com/shorts/ZdP-KdBfFFY" 
-    frameborder="0" allow="autoplay"></iframe>
