--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <div id="time">Carregando...</div>
     </div>
 
-    <!-- Incorporar o áudio do YouTube, ocultando o vídeo -->
-    <iframe width="0" height="0" 
-        src="https://www.youtube.com/embed/ZdP-KdBfFFY?autoplay=1&loop=1&playlist=ZdP-KdBfFFY" 
-        frameborder="0" allow="autoplay"></iframe>
+    <!-- Incorporar o áudio baixado -->
+    <audio autoplay loop>
+        <source src="https://raw.githubusercontent.com/brunobenites/contador-de-relacionamento/main/O%20minha%20gata%20morada%20dos%20meus%20sonhos%20-%20Charlie%20Brown%20Jr.mp3" type="audio/mp3">
+        Seu navegador não suporta áudio.
+    </audio>
 
     <script src="script.js"></script> <!-- Link para o arquivo JavaScript -->
 </body>
