--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tempo Juntos</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link para o arquivo CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Camada para os corações -->
     <div id="hearts"></div>
 
     <div id="container">
-        <!-- Título -->
         <div id="title">Tempo com o Amor da Minha Vida</div>
         
-        <!-- Carrossel de imagens -->
         <div class="image-slider">
             <div class="images">
                 <img src="https://raw.githubusercontent.com/brunobenites/contador-de-relacionamento/main/foto1.jpg" alt="Foto 1">
@@ -25,16 +22,15 @@
             </div>
         </div>
 
-        <!-- Exibe o tempo calculado -->
         <div id="time">Carregando...</div>
     </div>
 
-    <!-- Incorporar o áudio baixado -->
+    <!-- Áudio do Google Drive -->
     <audio autoplay loop>
-        <source src="https://raw.githubusercontent.com/brunobenites/contador-de-relacionamento/main/O%20minha%20gata%20morada%20dos%20meus%20sonhos%20-%20Charlie%20Brown%20Jr.mp3" type="audio/mp3">
+        <source src="https://drive.google.com/file/d/1Xbj8wj6n345WBisJ38Ar5ffMnmRdjsqx/view?usp=drive_link" type="audio/mp3">
         Seu navegador não suporta áudio.
     </audio>
 
-    <script src="script.js"></script> <!-- Link para o arquivo JavaScript -->
+    <script src="script.js"></script>
 </body>
 </html>
