--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="hearts"></div>
 
     <div id="container">
-        <div id="title">Tempo com o Amor da Minha Vida</div>
+        <div id="title">Tempo ao lado do Amor da Minha Vida</div>
         
         <div class="image-slider">
             <div class="images">
